src/test/ui/traits/issue-82830.stderr
error[E0275]: overflow evaluating the requirement `P: Sized`
  --> $DIR/issue-82830.rs:7:8
   |
LL |     t: MaybeBox<P>,
   |        ^^^^^^^^^^^
   |
note: required for `P` to implement `A<P, Box<P>>`
  --> $DIR/issue-82830.rs:10:12
   |
LL | impl<Y, N> A<Y, N> for P {
   |            ^^^^^^^     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
